fix info page width on mobile

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -45,6 +45,7 @@ main
 .content-cube img
 {
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .content-cube a
